[project]
name = "course-flask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "psycopg>=3.2.6",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "requests>=2.32.3",
    "ruff>=0.11.6",
]
